# rctab-docs

./: .gitignore  .readthedocs.yml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  tdp-draft-pre-2.0-dump-from-google-docs-no-html-tags.md  tdp-draft-pre-2.0-dump-from-google-docs-with-html-tags.md
.archive/: README.md
.githooks/: pre-commit
deployed-sites/: index.html
docs/: 00_documentation_abstracts.md  01_system_overview.md  02_software_design_and_specifications.md  03_system_hardware_specification.md  04_system_functionality_description.md  08_system_operations_procedures.md  10_personnel_deployment_and_training.md  13_quality_assurance_plan.md  15_system_change_notes.md  16_system_hardening_procedures_-_windows_os.md  18_user_guide.md  19_tabulation_options_for_rcv_tabulation.md  20_process_ranked_choice_voting_contest.md  22-month-archiving-procedure.md  22_installation_instructions_for_windows_os.md  25_configuration_file_parameters.md  26_rctab_cvr_files.md  27_rctab_config_files.md  28_post-election_audit_&_clearing_rctab_from_system.md  29_rctab_operator_log_messages.md  30_rctab_system_tab_hints.md  31_coding_and_header_comment_standards_for_rctab.md  acceptance_test_procedures.md  ballot_limitations_and_maximum_testing_range.md  coding_and_header_comment_standards_for_rctab.md  configuration_file_parameters.md  configuration_management_plan.md  design_and_interface_specification.md  development_environment_specification.md  expected-outcome-rcv-test-sets-multi-winner.md  index.md  l_and_a_testing.md  rctab_config_files.md  (+28 more)
scripts/mkdocs_plugins/link_stripper/: __init__.py  link_stripper.py  pyproject.toml  setup.py  test_link_stripper.py
(+329 files in other folders)
