[tool.poetry]
name = "rctab-docs"
version = "0.1.0"
description = ""
authors = ["Ranked Choice Voting Resource Center"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.29"
pymdown-extensions = "^10.8.1"
mkdocs = "^1.6.0"
markdown = "^3.6"
beautifulsoup4 = "^4.12.3"
link-stripper = { path = "./scripts/mkdocs_plugins/link_stripper", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
